--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ img {
   margin-bottom: 3rem;
 }
 
-.about-portfolio h1 {
+.about-portfolio h2 {
   margin: 1rem 0;
   font-size: 2rem;
   font-weight: 800;
@@ -137,15 +137,19 @@ img {
   font-size: 1rem;
   font-weight: bolder;
   display: inline-block;
-  width: 2rem;
+  width: 1rem;
   padding: 0 0.5rem;
+}
+
+.info-portfolio{
+  width:90%;
 }
 
 .list {
   margin-right: 1rem;
   display: flex;
   justify-content: space-between;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 600;
   color: #7a869a;
 }
@@ -163,7 +167,7 @@ img {
 }
 
 .tech-used {
-  margin-right: 8rem;
+  width:65%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 2rem;
@@ -175,6 +179,7 @@ img {
   padding: 0.25rem 1rem;
   border-radius: 0.5rem;
   font-size: 15px;
+  margin-right: 8px;
 }
 
 .btn {
@@ -259,6 +264,7 @@ img {
   margin-bottom: 1rem;
   background-color: #f7f7f9;
   border-radius: var(--radius);
+  margin:12px 0;
 }
 
 .lang-name {
