Update style for Contact Me section

--- a/styles.css
+++ b/styles.css
@@ -305,3 +305,22 @@ img {
 	line-height: 24px;
 	margin-bottom: 2rem;
 }
+
+form {
+	display: flex;
+	flex-direction: column;
+	padding: 0 2rem;
+}
+
+.formElement {
+	margin-bottom: 1rem;
+	padding: 1rem;
+	text-align: left;
+}
+
+::placeholder {
+	color: #bcbac5;
+}
+
+
+
