--- a/styles.css
+++ b/styles.css
@@ -1,603 +1,607 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 :root {
-  --radius: 1rem;
-  --clr-white: #fff;
-  --spacing: 0.25rem;
-  --transition: all 0.2s linear;
+	--radius: 1rem;
+	--clr-white: #fff;
+	--spacing: 0.25rem;
+	--transition: all 0.2s linear;
 }
 
 /* Some global styles wght@200;400 */
 
 body {
-  font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
-  background: #e5e5e5;
-  line-height: 1.5;
-  font-size: 1rem;
+	font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
+	background: #e5e5e5;
+	line-height: 1.5;
+	font-size: 1rem;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 a:visited {
-  color: #396df2;
+	color: #396df2;
 }
 
 ul {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 img {
-  width: 100%;
-  display: block;
+	width: 100%;
+	display: block;
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--clr-white);
-  color: #6070ff;
-  z-index: 2;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: var(--clr-white);
+	color: #6070ff;
+	z-index: 2;
 }
 
 .nav-center {
-  width: 100%;
-  margin: 0 auto;
+	width: 100%;
+	margin: 0 auto;
 }
 
 .nav-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem 2rem;
 }
 
 .nav-toggle {
-  background: transparent;
-  border: transparent;
-  font-size: 1.5rem;
-  color: #6070ff;
-  cursor: pointer;
-  transition: var(--transition);
+	background: transparent;
+	border: transparent;
+	font-size: 1.5rem;
+	color: #6070ff;
+	cursor: pointer;
+	transition: var(--transition);
 }
 
 .nav-toggle:hover {
-  transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 .nav-links {
-  height: 0;
-  overflow: hidden;
-  transition: var(--transition);
+	height: 0;
+	overflow: hidden;
+	transition: var(--transition);
 }
 
 .show-links {
-  height: 300px;
+	height: 300px;
 }
 
 .nav-link {
-  display: block;
-  padding: 1rem 2rem;
-  font-size: 1rem;
-  font-weight: 800;
-  text-transform: capitalize;
-  transition: var(--transition);
-  cursor: pointer;
+	display: block;
+	padding: 1rem 2rem;
+	font-size: 1rem;
+	font-weight: 800;
+	text-transform: capitalize;
+	transition: var(--transition);
+	cursor: pointer;
 }
 
 .nav-link:hover {
-  color: #2230d2;
-  padding: 2.25rem;
+	color: #2230d2;
+	padding: 2.25rem;
 }
 
 #logo {
-  font-weight: 1000;
+	font-weight: 1000;
+	transition: all linear 1s;
+}
+#logo:hover {
+	transform: rotateY(360deg);
 }
 
 @media screen and (min-width: 992px) {
-  .navbar {
-    padding: 1rem 8rem;
-  }
+	.navbar {
+		padding: 1rem 8rem;
+	}
 
-  .nav-toggle {
-    display: none;
-  }
+	.nav-toggle {
+		display: none;
+	}
 
-  .nav-center {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
+	.nav-center {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-wrap: wrap;
+	}
 
-  .nav-links {
-    height: auto;
-    display: flex;
-  }
+	.nav-links {
+		height: auto;
+		display: flex;
+	}
 
-  .nav-header {
-    padding: 0 0;
-    margin-right: 0.6rem;
-  }
+	.nav-header {
+		padding: 0 0;
+		margin-right: 0.6rem;
+	}
 
-  .nav-link {
-    padding: 0 1rem;
-    margin-right: 0.7rem;
-  }
+	.nav-link {
+		padding: 0 1rem;
+		margin-right: 0.7rem;
+	}
 
-  .nav-link:hover {
-    padding: 0;
-    background: transparent;
-  }
+	.nav-link:hover {
+		padding: 0;
+		background: transparent;
+	}
 }
 
 .hero {
-  min-height: 100vh;
-  background: url(./images/header-shapes\ mobile.png) right/contain no-repeat;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-bottom-left-radius: 5rem;
+	min-height: 100vh;
+	background: url(./images/header-shapes\ mobile.png) right/contain no-repeat;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-bottom-left-radius: 5rem;
 }
 
 .banner {
-  padding: 0 3rem;
+	padding: 0 3rem;
 }
 
 .banner h2 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-  color: #172b4d;
-  font-weight: 800;
+	font-size: 3rem;
+	margin-bottom: 1rem;
+	color: #172b4d;
+	font-weight: 800;
 }
 
 .banner p {
-  color: #344563;
+	color: #344563;
 }
 
 .contact {
-  padding: 3rem;
-  color: #6070ff;
-  text-transform: uppercase;
+	padding: 3rem;
+	color: #6070ff;
+	text-transform: uppercase;
 }
 
 .icons {
-  margin-top: 1.5rem;
-  display: flex;
-  justify-content: flex-start;
-  font-size: 2rem;
+	margin-top: 1.5rem;
+	display: flex;
+	justify-content: flex-start;
+	font-size: 2rem;
 }
 
 .social-icon {
-  padding-right: 1rem;
-  color: #505f79;
-  transition: var(--transition);
-  cursor: pointer;
+	padding-right: 1rem;
+	color: #505f79;
+	transition: var(--transition);
+	cursor: pointer;
 }
 
 .social-icon:hover {
-  color: black;
-  transform: translateY(5px);
+	color: black;
+	transform: translateY(5px);
 }
 
 @media screen and (min-width: 992px) {
-  .hero {
-    padding: 0 15rem;
-  }
+	.hero {
+		padding: 0 15rem;
+	}
 
-  .banner {
-    padding-top: 2rem;
-    margin-top: 5rem;
-  }
+	.banner {
+		padding-top: 2rem;
+		margin-top: 5rem;
+	}
 
-  .banner h2 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 60px;
-  }
+	.banner h2 {
+		font-size: 4rem;
+		font-weight: 700;
+		line-height: 60px;
+	}
 
-  .banner p {
-    max-width: 70%;
-    font-size: 22px;
-    font-weight: 400;
-    padding-bottom: 1rem;
-  }
+	.banner p {
+		max-width: 70%;
+		font-size: 22px;
+		font-weight: 400;
+		padding-bottom: 1rem;
+	}
 
-  .social-icon {
-    color: #505f79;
-  }
+	.social-icon {
+		color: #505f79;
+	}
 }
 
 /* work section */
 
 .work {
-  margin: 2rem;
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-row-gap: 2rem;
+	margin: 2rem;
+	display: grid;
+	grid-template-rows: repeat(4, 1fr);
+	grid-row-gap: 2rem;
 }
 
 .single-card {
-  padding: 2rem 1rem;
-  background-color: #fff;
-  border-radius: var(--radius);
-  margin-bottom: 3rem;
+	padding: 2rem 1rem;
+	background-color: #fff;
+	border-radius: var(--radius);
+	margin-bottom: 3rem;
 }
 
 .about-portfolio h2 {
-  margin: 1rem 0;
-  font-size: 2rem;
-  font-weight: 800;
+	margin: 1rem 0;
+	font-size: 2rem;
+	font-weight: 800;
 }
 
 .list li:not(.li)::before {
-  content: "\2022";
-  color: #7a869a;
-  font-size: 1rem;
-  font-weight: bolder;
-  display: inline-block;
-  width: 0.75rem;
-  padding: 0 0.1rem;
+	content: "\2022";
+	color: #7a869a;
+	font-size: 1rem;
+	font-weight: bolder;
+	display: inline-block;
+	width: 0.75rem;
+	padding: 0 0.1rem;
 }
 
 .list {
-  width: 80%;
+	width: 80%;
 
-  /* margin-right: 1rem; */
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  flex-wrap: nowrap;
-  font-size: 0.75rem;
-  font-weight: 600;
-  color: #7a869a;
+	/* margin-right: 1rem; */
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	flex-wrap: nowrap;
+	font-size: 0.75rem;
+	font-weight: 600;
+	color: #7a869a;
 }
 
 .li {
-  font-size: 0.75rem;
-  text-transform: uppercase;
-  color: #344563;
+	font-size: 0.75rem;
+	text-transform: uppercase;
+	color: #344563;
 }
 
 .about-portfolio p {
-  margin: 1rem 0;
-  padding-right: 1.5rem;
-  color: #344563;
+	margin: 1rem 0;
+	padding-right: 1.5rem;
+	color: #344563;
 }
 
 .tech-used {
-  max-width: 65%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem;
+	max-width: 65%;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 2rem;
 }
 
 .hidden {
-  display: none;
+	display: none;
 }
 
 .tech {
-  color: #6070ff;
-  background-color: #ebebff;
-  padding: 0.25rem 1rem;
-  border-radius: 0.5rem;
-  font-size: 15px;
-  margin-right: 8px;
+	color: #6070ff;
+	background-color: #ebebff;
+	padding: 0.25rem 1rem;
+	border-radius: 0.5rem;
+	font-size: 15px;
+	margin-right: 8px;
 }
 
 .btn {
-  display: inline-block;
-  border: 2px solid #396df2;
-  padding: 1rem;
-  background: transparent;
-  color: #396df2;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
+	display: inline-block;
+	border: 2px solid #396df2;
+	padding: 1rem;
+	background: transparent;
+	color: #396df2;
+	border-radius: 0.5rem;
+	font-size: 1rem;
+	font-weight: 600;
+	cursor: pointer;
 }
 
 .btn:hover {
-  background: #6070ff;
-  color: #fff;
+	background: #6070ff;
+	color: #fff;
 }
 
 .btn:active {
-  background: #2230d2;
-  color: #fff;
+	background: #2230d2;
+	color: #fff;
 }
 
 .about-portfolio-max {
-  display: none;
+	display: none;
 }
 
 @media screen and (min-width: 992px) {
-  .work {
-    margin: 10rem 10rem;
-    padding: 0;
-  }
+	.work {
+		margin: 10rem 10rem;
+		padding: 0;
+	}
 
-  .single-card {
-    display: flex;
-    padding: 2rem 2rem;
-  }
+	.single-card {
+		display: flex;
+		padding: 2rem 2rem;
+	}
 
-  .card-img {
-    width: 750px;
-    margin-right: 6rem;
-  }
+	.card-img {
+		width: 750px;
+		margin-right: 6rem;
+	}
 
-  .card-img img {
-    max-height: 544px;
-    min-height: 544px;
-  }
+	.card-img img {
+		max-height: 544px;
+		min-height: 544px;
+	}
 
-  .right {
-    flex-direction: row-reverse;
-  }
+	.right {
+		flex-direction: row-reverse;
+	}
 
-  .right-img {
-    margin-right: 0;
-    margin-left: 6rem;
-  }
+	.right-img {
+		margin-right: 0;
+		margin-left: 6rem;
+	}
 
-  .about-portfolio {
-    display: none;
-  }
+	.about-portfolio {
+		display: none;
+	}
 
-  .about-portfolio-max {
-    display: block;
-  }
+	.about-portfolio-max {
+		display: block;
+	}
 
-  .about-portfolio-max h2 {
-    margin: 1rem 0;
-    font-size: 3.5rem;
-    font-weight: bold;
-    color: #091e42;
-  }
+	.about-portfolio-max h2 {
+		margin: 1rem 0;
+		font-size: 3.5rem;
+		font-weight: bold;
+		color: #091e42;
+	}
 
-  .info-portfolio {
-    margin-bottom: 3rem;
-  }
+	.info-portfolio {
+		margin-bottom: 3rem;
+	}
 
-  .list {
-    max-width: 60%;
-    font-size: 18px;
-    line-height: 24px;
-  }
+	.list {
+		max-width: 60%;
+		font-size: 18px;
+		line-height: 24px;
+	}
 
-  .li {
-    font-size: 18px;
-    color: #091e42;
-    line-height: 24px;
-  }
+	.li {
+		font-size: 18px;
+		color: #091e42;
+		line-height: 24px;
+	}
 
-  .about-portfolio-max p {
-    font-size: 18px;
-  }
+	.about-portfolio-max p {
+		font-size: 18px;
+	}
 
-  .tech-used {
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-    justify-content: flex-start;
-  }
+	.tech-used {
+		margin-top: 2rem;
+		margin-bottom: 3rem;
+		justify-content: flex-start;
+	}
 
-  .order-1 {
-    order: 1;
-  }
+	.order-1 {
+		order: 1;
+	}
 
-  .order-2 {
-    order: 2;
-  }
+	.order-2 {
+		order: 2;
+	}
 
-  .order-3 {
-    order: 3;
-  }
+	.order-3 {
+		order: 3;
+	}
 
-  .order-4 {
-    order: 4;
-  }
+	.order-4 {
+		order: 4;
+	}
 }
 
 /* about myself section */
 
 .about-myself {
-  margin: 2rem 0;
-  padding: 4rem 2rem;
-  background: #fff;
-  border-top-right-radius: 50px;
-  margin-bottom: 0;
+	margin: 2rem 0;
+	padding: 4rem 2rem;
+	background: #fff;
+	border-top-right-radius: 50px;
+	margin-bottom: 0;
 }
 
 .about-text h2 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: 42px;
-  margin-bottom: 1rem;
-  color: #172b4d;
+	font-size: 2.5rem;
+	font-weight: 700;
+	line-height: 42px;
+	margin-bottom: 1rem;
+	color: #172b4d;
 }
 
 .about-me-text {
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 24px;
-  color: #344563;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 24px;
+	color: #344563;
 }
 
 .connect {
-  margin-left: -2rem;
+	margin-left: -2rem;
 }
 
 .contact-title {
-  padding: -40px;
-  margin-left: -5px;
+	padding: -40px;
+	margin-left: -5px;
 }
 
 .my-skills {
-  margin-top: 3rem;
+	margin-top: 3rem;
 }
 
 .skill-section {
-  margin-bottom: 2rem;
+	margin-bottom: 2rem;
 }
 
 .skill-title {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 1rem;
-  padding-right: 1rem;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 1rem;
+	padding-right: 1rem;
 }
 
 .img-logo {
-  height: 3rem;
-  width: 3rem;
-  margin-right: 2rem;
+	height: 3rem;
+	width: 3rem;
+	margin-right: 2rem;
 }
 
 .lang {
-  max-width: 40rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 1rem;
-  background-color: #f7f7f9;
-  border-radius: var(--radius);
-  margin: 12px 0;
+	max-width: 40rem;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 1rem;
+	background-color: #f7f7f9;
+	border-radius: var(--radius);
+	margin: 12px 0;
 }
 
 .lang-name {
-  color: #253858;
-  font-size: 14px;
-  font-weight: 600;
+	color: #253858;
+	font-size: 14px;
+	font-weight: 600;
 }
 
 .passive {
-  padding-bottom: 1rem;
-  border-bottom: 2px solid #dfe1e6;
+	padding-bottom: 1rem;
+	border-bottom: 2px solid #dfe1e6;
 }
 
 .drop-icon {
-  font-size: 1.3rem;
-  color: #acb7c3;
+	font-size: 1.3rem;
+	color: #acb7c3;
 }
 
 @media screen and (min-width: 992px) {
-  .about-myself {
-    padding: 10rem;
-    border-top-right-radius: 100px;
-  }
+	.about-myself {
+		padding: 10rem;
+		border-top-right-radius: 100px;
+	}
 
-  .about-myself-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 2rem;
-  }
+	.about-myself-section {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-column-gap: 2rem;
+	}
 
-  .my-skills {
-    margin-top: 0;
-  }
+	.my-skills {
+		margin-top: 0;
+	}
 
-  .about-me-text {
-    max-width: 80%;
-    font-size: 1.2rem;
-    line-height: 24px;
-  }
+	.about-me-text {
+		max-width: 80%;
+		font-size: 1.2rem;
+		line-height: 24px;
+	}
 
-  .languages {
-    display: flex;
-  }
+	.languages {
+		display: flex;
+	}
 
-  .lang {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-right: 1rem;
-  }
+	.lang {
+		flex-direction: column;
+		align-items: flex-start;
+		margin-right: 1rem;
+	}
 
-  .lang-name {
-    margin-top: 1rem;
-  }
+	.lang-name {
+		margin-top: 1rem;
+	}
 }
 
 .contact-me {
-  background: url(./images/contact-form-mobile.png) right/contain no-repeat;
-  background-color: #6070ff;
-  padding-top: 6rem;
-  border-top-left-radius: 5rem;
-  padding-bottom: 4rem;
+	background: url(./images/contact-form-mobile.png) right/contain no-repeat;
+	background-color: #6070ff;
+	padding-top: 6rem;
+	border-top-left-radius: 5rem;
+	padding-bottom: 4rem;
 }
 
 .contact-text {
-  padding: 0 2rem;
-  text-align: center;
+	padding: 0 2rem;
+	text-align: center;
 }
 
 .contact-text h2 {
-  font-size: 40px;
-  line-height: 52px;
-  margin-bottom: 1rem;
-  color: var(--clr-white);
+	font-size: 40px;
+	line-height: 52px;
+	margin-bottom: 1rem;
+	color: var(--clr-white);
 }
 
 .contact-me p {
-  color: #ebebff;
-  font-size: 18px;
-  line-height: 24px;
-  margin-bottom: 2rem;
+	color: #ebebff;
+	font-size: 18px;
+	line-height: 24px;
+	margin-bottom: 2rem;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  padding: 0 2rem;
+	display: flex;
+	flex-direction: column;
+	padding: 0 2rem;
 }
 
 .formElement {
-  margin-bottom: 1rem;
-  padding: 1rem;
-  text-align: left;
-  border-radius: 0.5rem;
-  border: none;
+	margin-bottom: 1rem;
+	padding: 1rem;
+	text-align: left;
+	border-radius: 0.5rem;
+	border: none;
 }
 
 ::placeholder {
-  color: #bcbac5;
+	color: #bcbac5;
 }
 
 .submit-btn {
-  width: 10rem;
-  background-color: #fff;
+	width: 10rem;
+	background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
-  .contact-me {
-    border-top-left-radius: 10rem;
-  }
+	.contact-me {
+		border-top-left-radius: 10rem;
+	}
 
-  .contact-me-section {
-    max-width: 40vw;
-    padding: 3rem 5rem;
-    margin: 0 auto;
-  }
+	.contact-me-section {
+		max-width: 40vw;
+		padding: 3rem 5rem;
+		margin: 0 auto;
+	}
 
-  .submit-btn {
-    align-self: center;
-  }
+	.submit-btn {
+		align-self: center;
+	}
 
-  ::placeholder {
-    font-size: 1.2rem;
-  }
+	::placeholder {
+		font-size: 1.2rem;
+	}
 
-  .formElement {
-    border-radius: 0;
-  }
+	.formElement {
+		border-radius: 0;
+	}
 }
