--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+html {
+	scroll-behavior: smooth;
+}
 
 :root {
 	--radius: 1rem;
@@ -79,8 +82,9 @@ img {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background: rgba(96, 112, 255, 0.6);
+	background: rgba(96, 112, 255, 0.4);
 	background-blend-mode: multiply;
+	backdrop-filter: blur(5px);
 }
 
 .nav-toggle {
@@ -126,7 +130,7 @@ img {
 	display: block;
 	color: white;
 	padding: 1rem 2rem;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	font-weight: 800;
 	text-transform: capitalize;
 	transition: var(--transition);
@@ -139,7 +143,11 @@ img {
 }
 
 #logo:hover {
-	transform: rotateY(360deg);
+	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
 }
 
 @media screen and (min-width: 992px) {
@@ -169,6 +177,7 @@ img {
 	}
 
 	.nav-link {
+		color: #6070ff;
 		padding: 0 1rem;
 		margin-right: 0.7rem;
 	}
